colour and image alts

--- a/index.html
+++ b/index.html
@@ -1,64 +1,105 @@
 <!doctype html>
 <html>
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div class="header">
     <div class="container">
-      <h1>Headlines.</h1>
+      <h1>Sam White.</h1>
       <ul>
-        <li><a href="3">About</a></li>
-        <li><a href="#expertise">Our Services</a></li>
-        <li><a href="3">Our Team</a></li>
-        <li><a href="#footer">Contact Us</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#performances">Upcoming Performances</a></li>
+        <li><a href="#skillset">Skillset</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="jumbotron">
     <div class="container">
-      <h2>We <span>collect and curate</span>
-articles, opinions, and images
-from around the world.</h2>
+      <h2>Professional musician with over <span>15 years experience</span> in setting up events and performing.</h2>
     </div>
   </div>
-  <div class="banner">
-    <div class="container">
-      <h2>The Bottom Line.</h2>
-      <p>We deliver the news that is relevant to you.</p>
-    </div>
-  </div>
-  <div class="container">
-    <h2 id="expertise">Our Expertise.</h2>
+  <!--<div class="container">
     <div class="main">
       <div class="spacer">
         <div class="cards">
           <div class="col">
-            <img src="https://content.codecademy.com/projects/headlines/p1.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p6.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p8.jpg">
+            <ul>
+              <li class="weddings"><a href="#weddings">Weddings</a></li>
+              <li class="openmic"><a href="#openmic">Open Mics</a></li>
+              <li class="cadet"><a href="#cadet">Cadet Shows and Parades</a></li>
+            </ul>
           </div>
           <div class="col">
-            <img src="https://content.codecademy.com/projects/headlines/p2.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p5.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p7.jpg">
+            <ul>
+              <li class="tech"><a href="#tech">Tech setup</a></li>
+              <li class="stage"><a href="#stage">Stage setup</a></li>
+              <li class="session"><a href="#session">Session Musician</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>-->
+  <div class="container">
+    <div class="main">
+      <div class="spacer">
+        <div class="cards">
+          <div class="col">
+            <div class="weddings">
+              <img src="./resources/andy-lee-FuDKEwFLsQU-unsplash.jpg">
+              <div class="text-box">
+                <a href="#weddings"><h3>Weddings</h3></a>
+              </div>
+            </div>
+            <div class="openmic">
+              <img src="./resources/brands-people-FuezoxTPpDk-unsplash.jpg">
+              <div class="text-box">
+                <a href="#openmic"><h3>Open Mic</h3></a>
+              </div>
+            </div>
           </div>
           <div class="col">
-            <img src="https://content.codecademy.com/projects/headlines/p3.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p4.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p9.jpg">
-            <img src="https://content.codecademy.com/projects/headlines/p10.jpg">
+            <div class="cadets">
+              <img src="./resources/FELPz9MWYAwrusk.jpg">
+              <div class="text-box">
+                <a href="#cadets"><h3>Cadet Shows and Parades</h3></a>
+              </div>   
+            </div>
+            <div class="tech">    
+              <img src="./resources/adi-goldstein-rgkKFn5Ysb0-unsplash.jpg">
+              <div class="text-box">
+                <a href="#tech"><h3>Tech Setup</h3></a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="stage">
+              <img src="./resources/istockphoto-1141293610-612x612.jpg">
+              <div class="text-box">
+                <a href="#stage"><h3>Stage Setup</h3></a>
+              </div>
+            </div>
+            <div class="session">
+              <img src="./resources/gabriel-gurrola-2UuhMZEChdc-unsplash.jpg">
+              <div class="text-box">
+                <a href="#session"><h3>Session Musician</h3></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="footer">
-    <h3>Headlines.</h3>
-    <p>1000 7th Avenue</p>
-    <p>New York, NY</p>
-    <p>(484) 192 - 8372</p>
+    <h3>Sam White.</h3>
+    <p>Ilkley</p>
+    <p>Yorkshire, UK</p>
+    <p>07979 123 123</p>
   </div>
 </body>
 </html>
